Add subfloat example (and fix bibliography)

--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -15,3 +15,18 @@ Figure~\ref{fig:label} shows something interesting.
 \end{figure}
 <%- eexample %>
 <%- include('floatflt.example.en.tex', this); %>
+
+<% if (documentclass == 'ieee') { -%>
+One can span a figure across mulitple columns by using \verb+\begin{figure*}\verb+.
+See <% if (cleveref) { %>\cref<% } else { %>Fig.~\ref<% } %>{fig:16x9} as an example.
+
+<%- bexample %>
+\begin{figure*}
+  \centering
+  \includegraphics[width=.6\textwidth]{example-image-16x9}
+  \caption{16x9 Figure}
+  \label{fig:16x9}
+\end{figure*}
+<%- eexample %>
+
+<% } -%>
