--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -645,6 +645,7 @@ It focuses on minimal examples, which can be directly adapted to the content
 <% if (enquotes == 'plainlatex') { %><%- include('plainlatex.enquotes.example.en.tex', this); %><% } -%>
 <% if (cleveref) { %><%- include('cleveref.example.en.tex', this); %><% } -%>
 <%- include('figure.example.en.tex', this); %>
+<%- include('subfloat.example.en.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
 <% if (listings == 'listings') { -%>
 <%- include('listings.example.en.tex', this); %>
@@ -700,9 +701,8 @@ In the bibliography, use \texttt{\textbackslash textsuperscript} for <%- bquote 
 E.g., <%- bquote %>The 2\textsuperscript{nd} conference on examples<%- equote %>.
 When you use \href{https://www.jabref.org}{JabRef}, you can use the clean up command to achieve that.
 See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the cleanup functionality.
+<% switch (documentclass) { case "lncs": -%>
 
-<% switch (documentclass) {
-  case "lncs": -%>
 \renewcommand{\bibsection}{\section*{References}} % requried for natbib to have "References" printed and as section*, not chapter*
 % Use natbib compatbile splncsnat style.
 % It does provide all features of splncs03, but is developed in a clean way.
@@ -713,13 +713,27 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
   \small % ensure correct font size for the bibliography
   \bibliography{<%= filenames.bib %>}
 \endgroup
-<%  break;
-default:  -%>
+<%  break; case "ieee": -%>
+
+% trigger a \newpage just before the given reference
+% number - used to balance the columns on the last page
+% adjust value as needed - may need to be readjusted if
+% the document is modified later
+%\IEEEtriggeratref{8}
+% The "triggered" command can be changed if desired:
+%\IEEEtriggercmd{\enlargethispage{-5in}}
+
+% Enable to reduce spacing between bibitems (source: https://tex.stackexchange.com/a/25774)
+% \def\IEEEbibitemsep{0pt plus .5pt}
+
+\bibliographystyle{IEEEtranN} % IEEEtranN is the natbib compatible bst file
+% argument is your BibTeX string definitions and bibliography database(s)
+\bibliography{<%= filenames.bib %>}
+<%  break; default: -%>
+
 \bibliographystyle{plain}
 \bibliography{<%= filenames.bib %>}
-<%
-break;
-} -%>
+<% break; } -%>
 
 % Enfore empty line after bibliography
 \ \\
