--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -17,7 +17,7 @@ Figure~\ref{fig:label} shows something interesting.
 <%- include('floatflt.example.en.tex', this); %>
 
 <% if (documentclass == 'ieee') { -%>
-One can span a figure across mulitple columns by using \verb+\begin{figure*}\verb+.
+One can span a figure across mulitple columns by using \verb+\begin{figure*}+.
 See <% if (cleveref) { %>\cref<% } else { %>Fig.~\ref<% } %>{fig:16x9} as an example.
 
 <%- bexample %>
