Real tables in celveref + IEEE table -> figure

--- a/generators/app/templates/cleveref.example.en.tex
+++ b/generators/app/templates/cleveref.example.en.tex
@@ -5,17 +5,24 @@ Cleveref demonstration: Cref at beginning of sentence, cref in all other cases.
 
 \begin{figure}
     \centering
-    Figure
+    \includegraphics[width=.1\textwidth]{example-image-a}
     \caption{Example figure for cref demo}
     \label{fig:ex:cref}
 \end{figure}
 
-\begin{table}
+\begin{<% if (documentclass == 'ieee') { %>figure<% } else { %>table<% } %>}
     \centering
-    Table
+    \begin{tabular}{ll}
+      \toprule
+      Heading1 & Heading2 \\
+      \midrule
+      One      & Two      \\
+      Thee     & Four     \\
+      \bottomrule
+    \end{tabular}
     \caption{Example table for cref demo}
     \label{tab:ex:cref}
-\end{table}
+\end{<% if (documentclass == 'ieee') { %>figure<% } else { %>table<% } %>}
 
 <%- bexample %>
 \Cref{fig:ex:cref} shows a simple fact, although \cref{fig:ex:cref} could also show something else.
