--- a/generators/app/templates/diagbox.example.en.tex
+++ b/generators/app/templates/diagbox.example.en.tex
@@ -1,6 +1,6 @@
 <%- bexample %>
 % Source: https://tex.stackexchange.com/a/468994/9075
-\begin{table}
+\begin{<% if (documentclass == 'ieee') { %>figure<% } else { %>table<% } %>}
 \caption{Table with diagonal line}
 \label{tab:diag}
 \begin{center}
@@ -12,5 +12,5 @@
 \hline
 \end{tabular}
 \end{center}
-\end{table}
+\end{<% if (documentclass == 'ieee') { %>figure<% } else { %>table<% } %>}
  <%- eexample %>
