Change from `\textwidth` to `\columnwidth`

--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -9,7 +9,7 @@ Figure~\ref{fig:label} shows something interesting.
 
 \begin{figure}
   \centering
-  \includegraphics[width=.8\textwidth]{example-image-golden}
+  \includegraphics[width=.8\columnwidth]{example-image-golden}
   \caption[Simple Figure]{Simple Figure. Based on <% if (available.citet) { %>\citet<% } else { %>Scharrer~\cite<% } %>{mwe}.}
   \label{fig:label}
 \end{figure}
@@ -23,6 +23,9 @@ See <% if (cleveref) { %>\cref<% } else { %>Fig.~\ref<% } %>{fig:16x9} as an exa
 <%- bexample %>
 \begin{figure*}
   \centering
+  % note that \textwidth is used instead of \columnwidth
+  % This ensures that the graphics width is 60% of the "page", and not just 60% of the current text column
+  % See https://tex.stackexchange.com/a/16956/9075 for details
   \includegraphics[width=.6\textwidth]{example-image-16x9}
   \caption{16x9 Figure}
   \label{fig:16x9}
