--- a/generators/app/templates/cleveref.example.en.tex
+++ b/generators/app/templates/cleveref.example.en.tex
@@ -5,7 +5,7 @@ Cleveref demonstration: Cref at beginning of sentence, cref in all other cases.
 
 \begin{figure}
     \centering
-    \includegraphics[width=.1\textwidth]{example-image-a}
+    \includegraphics[width=.75\columnwidth]{example-image-a}
     \caption{Example figure for cref demo}
     \label{fig:ex:cref}
 \end{figure}
