Remove undefint hint

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -240,11 +240,11 @@ default:  -%>
 \title{Quick start for LaTeXing with IEEEtran.cls for\\ IEEE Computer Society Conferences}
 
 \author{%
-  \IEEEauthorblockN{First Author}
+  \IEEEauthorblockN{First Author, Second Author}
   \IEEEauthorblockA{University of Examples, Germany\\
     \{lastname\}@example.org}
   \and
-  \IEEEauthorblockN{Second Author}
+  \IEEEauthorblockN{Third Author}
   \IEEEauthorblockA{School of Electrical and\\Computer Examples\\
     Georgia Institute of Examples\\
     Atlanta, Georgia 30332--0250\\
@@ -475,7 +475,9 @@ Next, explain in the chapter intro how you solve the research problem in this ch
 
 \emph{The first paragraph describes the first sub-problem and develops the requirements a solution has to satisfy (SM2 for this section).} The requirements have to be based on the knowledge and reasoning developing in the preceding chapters and sections. Try to use an example to illustrate the problem and the desired properties of the solution. Check that every term/concept you use here has already been defined already in a previous section. If you cannot describe your problem without defining new terms, you may have to add another section before this one that develops the terms and concepts you need to explain the problem.
 
-\emph{The second paragraph describes the method/approach how you address the problem (SM3 for this section).} Describe the method in a level of detail that allows another student to reproduce your steps. Make use of appendices (see <% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:appendix1}) if certain details take too much space.
+\emph{The second paragraph describes the method/approach how you address the problem (SM3 for this section).} Describe the method in a level of detail that allows another student to reproduce your steps.
+Make use of appendices % (see <% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:appendix1}) 
+if certain details take too much space.
 
 \emph{The third, fourth, and following paragraph provides details on applying the method or developing a new approach, i.e., execution (SM4) and may explain results (SM5)}, i.e. details on the steps needed to reproduce the results. 
 
