Remove empty line

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -591,9 +591,8 @@ The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } e
 \newcount\LTGendlineexample
 \newenvironment{ltgexample}%
 {\LTGbeginlineexample=\numexpr\inputlineno+1\relax}%
-{%
-\LTGendlineexample=\numexpr\inputlineno-1\relax%
-
+{\LTGendlineexample=\numexpr\inputlineno-1\relax%
+%
 \tcbinputlisting{%
   listing only,
   listing file=\currfilepath,
