--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -1,4 +1,4 @@
-<% if (latexcompiler == "lualatex") { -%>
+<% if (latexcompiler == "lualatex") { -%><%#
 ###########################################################################
 lualatex
 ###########################################################################
