Fix listings at luatex - utf8 works "out of the box" - no tweak needed

--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -71,6 +71,7 @@
   %
   captionpos=b
 }
+<% if (latexcompiler == "pdflatex") { -%>
 
 % Ermögliche Umlaute when using \lstinputputlisting.
 % Siehe https://stackoverflow.com/a/29260603/873282 für Details.
@@ -89,6 +90,7 @@
   {ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
   {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
 }
+<% } -%>
 <% if (documentclass == 'lncs' && listings == 'listings+minted') { -%>
 
 %\renewcommand{\lstlistingname}{List.}
