--- a/generators/app/templates/listings.preamble.en.tex
+++ b/generators/app/templates/listings.preamble.en.tex
@@ -74,6 +74,7 @@
   %
   captionpos=b
 }
+<% if (latexcompiler == "pdflatex") { -%>
 
 % Enable Umlauts when using \lstinputputlisting.
 % See https://stackoverflow.com/a/29260603/873282 für details.
@@ -92,6 +93,7 @@
   {ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
   {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
 }
+<% } -%>
 <% if (documentclass == 'lncs' && listings == 'listings+minted') { -%>
 
 %\renewcommand{\lstlistingname}{List.}
