--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -1,8 +1,12 @@
-<% if (latexcompiler == "lualatex") { -%>
+<% if (latexcompiler == "lualatex") { -%><%#
+###########################################################################
+lualatex
+###########################################################################
+-%>
 \usepackage[no-math]{fontspec}
 \usepackage{unicode-math}
-<% if (font == "arial") { -%>
-<%# -%>
+
+<% switch (font) { case "arial": -%>
 <%# Arial and LuaLaTeX -%>
 <%# -%>
 \setmainfont[Ligatures=TeX]{Arial}
@@ -13,8 +17,7 @@
 % shapely l, upright quotes
 % If it is too large, add ",Scale=.9"
 \setmonofont[StylisticSet={1,3}]{Inconsolatazi4}
-<% } else if (font == "times") { -%>
-<%# -%>
+<% break; case "times": -%>
 <%# Times New Roman and LuaLaTeX -%>
 <%# -%>
 % See https://tug.org/FontCatalogue/texgyretermes/ for more information
@@ -41,12 +44,13 @@
 % Normal scaling is too large --> thus, we use ",Scale=.9"
 \setmonofont[StylisticSet={1,3},Scale=.9]{Inconsolatazi4}
 <% } -%>
-<% } else if (texlive == 2019) { -%>
+<%  break; default: -%>
+<% if (texlive == 2019) { -%>
 <%# no special configuration required for lualatex to use the LaTeX default font.
     See https://tex.stackexchange.com/a/423225/9075 for details
--%>
+} else if (documentclass === 'ieee' { -%>
+<%# The default font configuration of the IEEE template is used -%>
 <% } else { -%>
-<%# -%>
 <%# Default LaTeX Font and LuaLaTeX -%>
 <%# -%>
 
@@ -72,32 +76,42 @@ BoldItalicFont=NewCMMono10-BoldOblique.otf,%
 SmallCapsFeatures={Numbers=OldStyle}]{NewCMMono10-Regular.otf}
 
 \setmathfont{NewCMMath-Regular.otf}
-<% } -%>
+<% } break; } -%>
 
 % Enable proper ligatures
 % For more information see https://ctan.org/pkg/selnolig
 % language "english" or "ngerman" is passed to selnolig by the document class
 \usepackage{selnolig}
-<% } else { -%>
-<%# pdflatex -%>
-<% if (font == "arial") { -%>
-<%# -%>
+<% } else { -%><%#
+###########################################################################
+pdflatex
+###########################################################################
+-%>
+<% switch (font) { case "arial": -%>
 <%# Arial and pdflatex -%>
 <%# -%>
+
 % Headings are typset in Helvetica (which is similar to Arial)
-% DE: Schriftart fuer die Ueberschriften - ueberschreibt lmodern
 \usepackage[scaled=.95]{helvet}
-<% } else if (font == "times") { -%>
-<%# -%>
+<% break; case "times": -%>
 <%# Times New Roman and pdflatex -%>
 <%# -%>
 \RequirePackage{newtxtext}
 \RequirePackage{newtxmath}
 \RequirePackage[zerostyle=b,scaled=.9]{newtxtt}
-<% } else { -%>
-<%# -%>
+<% break; default: -%>
 <%# Computer Modern and pdflatex -%>
 <%# -%>
+<% if (documentclass === 'ieee') { -%>
+<%# The default font configuration (Palatino/Palladio) of the IEEE template is used.
+    In addition, we make the code appear more nice -%>
+
+% use nicer font for code
+\usepackage[zerostyle=b,scaled=.75]{newtxtt}
+<% } else { -%>
+<%# Default LaTeX Font and LuaLaTeX -%>
+<%# -%>
+
 % This is the modern package for "Computer Modern".
 % In case this gets activated, one has to switch from cmap package to glyphtounicode (in the case of pdflatex)
 \usepackage[%
@@ -109,6 +123,7 @@ SmallCapsFeatures={Numbers=OldStyle}]{NewCMMono10-Regular.otf}
     qt=false%
 ]{cfr-lm}
 <% } -%>
+<% break; } -%>
 <% if (documentclass == 'scientific-thesis') { -%>
 
 \usepackage{setspace}
