Change from `\columnwidth` to `\linewidth`

--- a/generators/app/templates/subfloat.example.en.tex
+++ b/generators/app/templates/subfloat.example.en.tex
@@ -5,10 +5,10 @@ An example of two sub figures is shown in <% if (cleveref) { %>\cref<% } else { 
 <%- bexample %>
 \begin{figure<% if (documentclass == 'ieee') { %>*<% } %>}[!b]
     \centering
-    \subfloat[Case I]{\includegraphics[width=.4\columnwidth]{example-image-a}%
+    \subfloat[Case I]{\includegraphics[width=.4\linewidth]{example-image-a}%
     \label{fig:first_case}}
   \hfil
-    \subfloat[Case II]{\includegraphics[width=.4\columnwidth]{example-image-b}%
+    \subfloat[Case II]{\includegraphics[width=.4\linewidth]{example-image-b}%
     \label{fig:second_case}}
   \caption{Example figure with two sub figures.}
   \label{fig:two_sub_figures}
@@ -28,10 +28,10 @@ An example is shown in <% if (cleveref) { %>\cref<% } else { %>Fig.~\ref<% } %>{
 <%- bexample %>
 \begin{figure*}[!b]
     \centering
-    \subfloat[]{\includegraphics[width=.4\columnwidth]{example-image-a}%
+    \subfloat[]{\includegraphics[width=.4\linewidth]{example-image-a}%
     \label{fig:first_case_ieee}}
   \hfil
-    \subfloat[]{\includegraphics[width=.4\columnwidth]{example-image-b}%
+    \subfloat[]{\includegraphics[width=.4\linewidth]{example-image-b}%
     \label{fig:second_case_ieee}}
   \caption{Example figure with two sub figures. IEEE style. (a) The first case. (b) The second case.}
   \label{fig:two_sub_figures_ieee}
