--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -165,6 +165,10 @@
   \llncs{book editors and title}{0042} %% 0042 is the start page
 \fi
 <% } -%>
+<% if (documentclass == 'scientific-thesis') { -%>
+
+<%- include('scientific-thesis-cover.preamble.de.tex', this); %>
+<% } -%>
 <% if (latexcompiler == "pdflatex") { -%>
 
 % Enable copy and paste of text from the PDF
