--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -106,7 +106,7 @@ default:  -%>
 <% if (documentclass == 'lncs' || documentclass == 'ieee')  { -%>
 <%- include('natbib.preamble.en.tex', this); %>
 <% } -%>
-<% if (documentclass == 'lncs')  { -%>
+<% if (documentclass == 'lncs') { -%>
 
 % Prepare more space-saving rendering of the bibliography
 % Source: https://tex.stackexchange.com/a/280936/9075
@@ -182,6 +182,10 @@ default:  -%>
   %example: llncs{Anonymous et al. (eds). \emph{Proceedings of the International Conference on \LaTeX-Hacks}, LNCS~42. Some Publisher, 2016.}{0042}
   \llncs{book editors and title}{0042} %% 0042 is the start page
 \fi
+<% } -%>
+<% if (documentclass == 'scientific-thesis') { -%>
+
+<%- include('scientific-thesis-cover.preamble.en.tex', this); %>
 <% } -%>
 <% if (latexcompiler == "pdflatex") { -%>
 
