--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -167,6 +167,10 @@
 <% } -%>
 <% if (documentclass == 'scientific-thesis') { -%>
 
+\input{acronyms}
+
+\makeindex
+
 <%- include('scientific-thesis-cover.preamble.de.tex', this); %>
 <% } -%>
 <% if (latexcompiler == "pdflatex") { -%>
@@ -185,8 +189,7 @@
 <% } -%>
 
 \begin{document}
-<% switch (documentclass) {
-  case "lncs": -%>
+<% switch (documentclass) { case "lncs": -%>
 
 \title{Paper Title}
 % If Title is too long, use \titlerunning
@@ -241,10 +244,106 @@ Winery~\cite{Winery} is a graphical \commentontext{modeling}{modeling with one `
 The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
 <%  break;
 default:  -%>
-\lipsum[1]
-<%
-break;
-} -%>
+\pagenumbering{arabic}
+\Titelblatt
+
+%Eigener Seitenstil fuer die Kurzfassung und das Inhaltsverzeichnis
+\deftriplepagestyle{preamble}{}{}{}{}{}{\pagemark}
+%Doku zu deftriplepagestyle: scrguide.pdf
+\pagestyle{preamble}
+\renewcommand*{\chapterpagestyle}{preamble}
+
+%Kurzfassung / abstract
+%auch im Stil vom Inhaltsverzeichnis
+\section*{Kurzfassung}
+
+<Kurzfassung der Arbeit>
+
+\cleardoublepage
+
+\microtypesetup{protrusion=false}
+
+% In case you have trouble with headings reaching into the page numbers, enable the following three lines.
+% Hint by http://golatex.de/inhaltsverzeichnis-schreibt-ueber-rand-t3106.html
+%
+%\makeatletter
+%\renewcommand{\@pnumwidth}{2em}
+%\makeatother
+%
+% Bei einem ungünstigen Seitenumbruch im Inhaltsverzeichnis, kann dieser mit
+% \addtocontents{toc}{\protect\newpage}
+% an der passenden Stelle im Fließtext erzwungen werden.
+\tableofcontents
+
+\listoffigures
+
+\listoftables
+<% if (listings == 'listings') { -%>
+
+% We use lstlisting environments with caption paramters.
+% Thus, we need that command.
+% Alternative: \listof{Listing}{List of Listings}
+\lstlistoflistings
+<% } else { -%>
+
+\listof{Listing}{Verzeichnis der Listings}
+<% } -%>
+
+%mittels \newfloat wurde die Algorithmus-Gleitumgebung definiert.
+%Mit folgendem Befehl werden alle floats dieses Typs ausgegeben
+%\listof{Algorithmus}{Verzeichnis der Algorithmen}
+%\listofalgorithms %Ist nur für Algorithmen, die mittels \begin{algorithm} umschlossen werden, nötig
+
+% Abkürzungsverzeichnis
+\printnoidxglossaries
+
+\microtypesetup{protrusion=true}
+
+% Headline and footline
+\renewcommand*{\chapterpagestyle}{scrplain}
+\pagestyle{scrheadings}
+\pagestyle{scrheadings}
+\ihead[]{}
+\chead[]{}
+\ohead[]{\headmark}
+\cfoot[]{}
+\ofoot[\usekomafont{pagenumber}\thepage]{\usekomafont{pagenumber}\thepage}
+\ifoot[]{}
+
+\chapter{Einleitung}
+In diesem Kapitel steht die Einleitung zu dieser Arbeit.
+Sie soll nur als Beispiel dienen und hat nichts mit dem Buch \cite{WSPA} zu tun.
+Nun viel Erfolg bei der Arbeit!
+
+Bei \LaTeX\ werden Absätze durch freie Zeilen angegeben.
+Da die Arbeit über ein Versionskontrollsystem versioniert wird, ist es sinnvoll, pro \emph{Satz} eine neue Zeile im \texttt{.tex}-Dokument anzufangen.
+So kann einfacher ein Vergleich von Versionsständen vorgenommen werden.
+
+Die Arbeit ist in folgender Weise gegliedert:
+In \cref{chap:k2} werden die Grundlagen dieser Arbeit beschrieben.
+Schließlich fasst \cref{chap:zusfas} die Ergebnisse der Arbeit zusammen und stellt Anknüpfungspunkte vor.
+
+
+\chapter{Kapitel zwei}
+\label{chap:k2}
+
+Hier wird der Hauptteil stehen.
+Falls mehrere Kapitel gewünscht, entweder mehrmals \texttt{\textbackslash{}chapter} benutzen oder pro Kapitel eine eigene Datei anlegen und \texttt{ausarbeitung.tex} anpassen.
+
+LaTeX-Hinweise stehen in \cref{chap:latextipps}.
+
+%noch etwas Fülltext
+\blinddocument
+
+\chapter{Verwandte Arbeiten}
+Eine Beschreibung relevanter wissenschaftlicher Arbeiten mit Bezug zur eigenen Arbeit. Der Abschnitt kann je nach Kontext auch an anderer Stelle stehen.
+
+\chapter{Zusammenfassung und Ausblick}\label{chap:zusfas}
+Hier bitte einen kurzen Durchgang durch die Arbeit.
+
+\section*{Ausblick}
+...und anschließend einen Ausblick
+<% break; } -%>
 
 <% if (examples) { -%>
 <%= heading1 %>{LaTeX Hinweise}
@@ -349,5 +448,22 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 %
 Alle Links wurden zuletzt am 29.03.2021 geprüft.
 <% } -%>
+<% if (documentclass == 'scientific-thesis') { -%>
 
+%%% ===============================================================================
+\appendix 
+\addcontentsline{toc}{chapter}{Anhang}
+
+%\listoffigures
+%\listoftables
+%%% ===============================================================================
+
+%%% ===============================================================================
+%<%= heading1 %>{My first appendix}\label{sec:appendix1}
+%%% ===============================================================================
+
+\pagestyle{empty}
+\renewcommand*{\chapterpagestyle}{empty}
+\Versicherung
+<% } -%>
 \end{document}
