Refine acm support
Additionally

- Put latexmk to the README.md
- Remove double spaces

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -82,6 +82,11 @@ SmallCapsFeatures={Numbers=OldStyle}]{NewCMMono10-Regular.otf}
 % For more information see https://ctan.org/pkg/selnolig
 % language "english" or "ngerman" is passed to selnolig by the document class
 \usepackage{selnolig}
+<% if (documentclass == 'scientific-thesis') { -%>
+
+\usepackage{setspace}
+\setstretch{1.2}
+<% } -%>
 <% } else { -%><%#
 ###########################################################################
 pdflatex
@@ -109,9 +114,8 @@ pdflatex
 % use nicer font for code
 \usepackage[zerostyle=b,scaled=.75]{newtxtt}
 <% } else { -%>
-<%# Default LaTeX Font and LuaLaTeX -%>
+<%# Default LaTeX Font and pdflatex -%>
 <%# -%>
-
 % This is the modern package for "Computer Modern".
 % In case this gets activated, one has to switch from cmap package to glyphtounicode (in the case of pdflatex)
 \usepackage[%
