--- a/generators/app/templates/natbib.preamble.en.tex
+++ b/generators/app/templates/natbib.preamble.en.tex
@@ -16,7 +16,7 @@
   %sort&compress % as sort but in addition multiple numerical citations
                 % are compressed if possible (as 3-6, 15);
 ]{natbib}
-<% } else { -%>
+<% } else if (documentclass != "acmart") { -%>
 <%# normal IEEE or LNCS -%>
 \usepackage[%
   square,        % for square brackets
