--- a/generators/app/templates/url.preamble.en.tex
+++ b/generators/app/templates/url.preamble.en.tex
@@ -1,8 +1,10 @@
+<% if (documentclass != 'acmart') { -%>
 % Links behave as they should. Enables "\url{...}" for URL typesettings.
 % Allow URL breaks also at a hyphen, even though it might be confusing: Is the "-" part of the address or just a hyphen?
 % See https://tex.stackexchange.com/a/3034/9075.
 \usepackage[hyphens]{url}
 
+<% } -%>
 % When activated, use text font as url font, not the monospaced one.
 % For all options see https://tex.stackexchange.com/a/261435/9075.
 % \urlstyle{same}
