Use built-in pbalance functionality

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -40,11 +40,9 @@
 % To disable outputting page headers and footers, remove "runningheads"
 \documentclass[runningheads,a4paper,english]{llncs}[2018/03/10]
 <% break; case "acmart": -%>
-\documentclass[sigconf,review]{acmart}
-
-% Balance the last page
-% The pbalance package (see https://ctan.org/pkg/pbalance) "just works" (in contrast to balance.sty or other solutions)
-\usepackage{pbalance}
+% We balance the last page using the package "pbalance" (see https://ctan.org/pkg/pbalance), because it "just works" (in contrast to balance.sty or other solutions)
+% In case you have an older texlive distribution, replace "pbalance" by "balance"
+\documentclass[sigconf,review,pbalance]{acmart}
 <% break; case "ieee": -%>
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
 % For the final version, replace "draftcls" by "final"
