Add DOI, ORCID, startPage

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -80,8 +80,10 @@
 <%- include('babel.preamble.en.tex', this); -%>
 
 <%- include('url.preamble.en.tex', this); -%>
-
+<%# ACM already provides a very good font configuration; thus we do not need to override it -%>
+<% if (documentclass != 'acmart') { %>
 <%- include('font.preamble.en.tex', this); -%>
+<% } -%>
 
 <%- include('microtype.preamble.en.tex', this); -%>
 
@@ -176,6 +178,8 @@
 <% switch (documentclass) { case "acmart": -%>
 
 \acmConference[short-conference-name]{full-conference-name}{November 02--06, 2021}{City, Country}
+\acmDOI{10.1145/9999997.9999999}
+%\startPage{457}
 <% break; case "lncs": -%>
 
 % Add copyright
@@ -244,6 +248,7 @@
 <% break; case "acmart": -%>
 \title{Paper Title}
 \author{First Author}
+\orcid{ORCID}
 \affiliation{%
     \department{Department}
     \institution{Institution}
